--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="header">
                 <div class="sub_header">
                     <div class="logo">
-                        <img src="Assets/logo.png" alt="logo">
+                        <img src="assets/logo.png" alt="logo">
                     </div>
                     <div class="menu_item">
                         <ul>
