add logo in footer

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
             <div class="Footer_page">
                 <footer class="Footer_conatiner">
                     <div class="Footer_header">
-                        <img src="./Assets/logo.png" alt="Logo">
+                        <img src="assets/logo.png" alt="Logo">
                         <br>
                         <br>
                         <p>
